# NRay

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  mem
Shaders/: ShaderCommon.h  ShaderDefinitions.h  clearColor.comp  clearColor.slang  neuralSDF.comp  neuralSDF.slang  neuralSdfTest.comp  neuralSdfTest.spv  shader.comp
assets/: imgui.ini  style.ini
assets/models/: test_scene.gltf
base/: Base.h  FileManager.cpp  FileManager.hpp  Log.cpp  Log.h  Pch.h  Pch.hpp  Timer.hpp
core/: ComputeApplication.cpp  ComputeApplication.hpp  ImageOptimizer.cpp  ImageOptimizer.hpp  Lmath.hpp  NeuralSdf.cpp  NeuralSdf.hpp  SlangTest.cpp  SlangTest.hpp  VulkanBase.cpp  VulkanBase.h  VulkanBase.hpp  VulkanTools.h  vk_utils.cpp
ignore/: NeuralSdf copy.cpp  NeuralSdf.cpp  Vkw.cpp  Vkw.hpp  VulkanBase.cpp  VulkanBase.hpp
scripts/: generate_cpp_module_dependencies.py  get_std_module_path.py
source/Base/: Base.hpp  FileManager.cpp  FileManager.cppm  FileManager.hpp  Log.cpp  Log.cppm  Log.hpp  Macros.h  NRay.cppm  Pch.hpp  Structs.cppm  Timer.cppm  Timer.hpp  Types.cppm  Util.cpp  Util.cppm  Util.hpp  std_lib.cxx  stl.cppm
source/Core/: Editor.cpp  Editor.cppm  Editor.hpp  Lmath.cppm  Lmath.cxx  Lmath.hpp  Lmath.types.cppm  Lmath_types.h  Materials.cpp  Materials.cppm  UI.cpp  UI.cppm  UI.hpp  VulkanBackend.cpp  VulkanBackend.cppm  VulkanBase.cpp  VulkanBase.hpp  Window.cpp  Window.cppm  Window.hpp  lmath.cppm  lmath.hpp  lmath_types.hpp
source/Engine/: Camera.cppm  Component.cppm  Component.hpp  Entity.cppm  Entity.hpp  Project.cpp  Project.cppm  Project.hpp  Runtime.cppm  RuntimeContext.cppm  SceneGraph.cpp  SceneGraph.cppm  SceneGraph.hpp
source/Resources/: AssetIO.cpp  GLTFLoader.cpp  GLTFLoader.cppm  GLTFLoader.hpp  ImageIO.cppm  ImageIO.hpp  Objects.cppm  Objects.hpp
source/Shaders/: Bindless.h  GpuTypes.h  Opaque.frag  Opaque.h  Opaque.vert  Pbr.h  Phong.cppm  Phong.frag  Phong.h  Phong.vert  Quad.vert  ShaderCommon.h  TexImage.frag  inverse.glsl  transpose.glsl
source/Shaders/include/: Bindless.h  GpuTypes.h  Indexing.h  Opaque.h  Phong.h  inverse.glsl  transpose.glsl
tests/: Test.cpp  Test.cppm  Test.hpp  TestCommon.cpp  TestCommon.hpp  TestMain.cpp  TestMain.hpp
tests/FeatureTest/: FeatureTest.comp  FeatureTest.cpp  FeatureTest.cppm  FeatureTest.hpp  FeatureTest.slang  FeatureTest.vert  glTF.vert  test2.slang
tests/HelloTriangle/: HelloTriangle.cpp  HelloTriangle.frag  HelloTriangle.hpp  HelloTriangle.vert  testDraw.comp
tests/ImageOptimization/: ImageOptimization.comp  ImageOptimization.cpp  ImageOptimization.cppm  ImageOptimization.hpp  ImageOptimization.slang  clearColor.slang
tests/NeuralSdf/: NeuralSdf.cpp  NeuralSdf.cppm  NeuralSdf.hpp  clearColor.comp  clearColor.slang  neuralSDF.comp  neuralSDF.slang
tests/RadienceField/: RadienceField.comp  RadienceField.cpp  RadienceField.hpp  RadienceField.slang
tests/SlangTest/: ImageOptimization.slang  SlangTest.cpp  SlangTest.hpp  clearColor.slang
tests/Window/: WindowTest.comp  WindowTest.cpp  WindowTest.frag  WindowTest.hpp
